--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,1 @@
-app.title=Spring Configuration Server Example  ---  Welcome To My App
+app.title=Spring Configuration Server Example  ---  Welcome To My App done in Lumen
